<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name" translatable="false">InStat</string>
    <!--    <string name="login" translatable="false">Login</string>-->
    <!--    <string name="e_mail" translatable="false">E-mail</string>-->
    <!--    <string name="instat_tv" translatable="false">Если у Вас нет логина и пароля, то пройдите на сайт <a href="https://staging.instat.tv/login">instat.tv</a> и зарегистрируйтесь</string>-->
    <!--    <string name="instat" translatable="false">Instat</string>-->
    <!--    <string name="score" translatable="false">Счет</string>-->
    <!--    <string name="add_to_favorite" translatable="false">Добавить в избранное</string>-->
    <string name="whitespace" translatable="false">Пробел</string>
    <string name="clear" translatable="false">Очистить</string>

    <string name="test_mp4" translatable="false">https://storage.googleapis.com/exoplayer-test-media-0/BigBuckBunny_320x180.mp4</string>


    <!-- new-->
    <string name="lang">EN</string>
    //флаг используемого языка в приложении
    <!-- LoginFragment -->
    <string name="Enter">Entrance</string>
    <string name="welcome_sign_in_to_access_your_account">Welcome! Sign in to access your account.</string>
    <string name="enter_login">Enter login</string>
    <string name="enter_password">Enter password</string>
    <string name="to_come_in">Login</string>
    <string name="register_now">Register now</string>
    <!-- RegistrationFragment -->
    <string name="check_in">Registration</string>
    <!-- MyPreferencesFragment -->
    <string name="my_pref">My preferences</string>
    <string name="apply">Apply</string>
    <!--Side menu-->
    <string name="hide_account">Hide score</string>
    <string name="showe_account">Show score</string>
    <string name="search">Search</string>
    <string name="home">Home</string>
    <string name="favorites">Favorites</string>
    <string name="account">Account</string>
    <!--Home-->
    <string name="live">Live</string>
    <!--Favorite -->
    <string name="all">All</string>
    <string name="players">Players</string>
    <string name="commands">Commands</string>
    <string name="tournaments">Tournaments</string>
    <!--Calendar-->
    <string name="proceed">Proceed</string>
    <string name="january">January</string>
    <string name="february">February</string>
    <string name="march">March</string>
    <string name="april">April</string>
    <string name="may">May</string>
    <string name="june">June</string>
    <string name="july">July</string>
    <string name="august">August</string>
    <string name="september">September</string>
    <string name="october">October</string>
    <string name="november">November</string>
    <string name="december">December</string>
    <!-- Popup -->
    <string name="statistics">Statistics</string>
    <string name="video">Video</string>
    <string-array name="popup_video_names">
        <item>Watch</item>
        <item>Additionally</item>
        <item>By players</item>
        <item>Match events</item>
        <item>Languages</item>
    </string-array>
    <string name="teams">Teams</string>
    <string name="table">Table</string>
    <!-- search -->
    <string-array name="search_names">
        <item>Players</item>
        <item>Teams</item>
        <item>Tournaments</item>
    </string-array>
    <!-- Live -->
    <string name="watch_live_stream">Watch live stream</string>
    <string name="watch_from_the_start">Watch from the start</string>
    <string name="continue_with">Continue with %s</string>
    <!--Alert-->
    <string name="alert_text">Sorry, this match is \nnot available in your country</string>
    <string name="alert_title">Not available</string>
    <!--Account -->
    <string name="text_phone">Phone: </string>
    <string name="text_email">E-mail: </string>
    <string name="text_country">Country: </string>
    <string name="text_subscriptions">Subscriptions</string>
    <string name="text_pay_story">Payment history</string>
    <string name="text_visibly_pay">Hide score</string>
    <string name="text_lenguage">Language</string>
    <string name="text_yes">Yes</string>
    <string name="text_no">No</string>
    <string name="text_language">English</string>
    <string name="text_exit">Exit</string>
    <string name="text_football">Football</string>
    <string name="text_hockey">Hockey</string>
    <string name="text_basketball">Basketball</string>
    <string name="text_data_pay">Payment date</string>
    <string name="text_subscribe">Subscription</string>
    <string name="text_type">Type</string>
    <string name="text_sum">Sum</string>
    <string name="text_close_app">Are you sure you want to exit the program?</string>
    <string name="text_logout">Are you sure you want to log out of your account?</string>
    <string name="text_close_app_title">Confirmation</string>
    <string name="pay_story">Payment history</string>
    <string-array name="languages">
        <item>English</item>
        <item>Русский</item>
    </string-array>
    <!-- Billing -->
    <string-array name="billing_type_names">
        <item>Month</item>
        <item>Year</item>
        <item>Pay-per-view</item>
    </string-array>
    <string name="text_choose_quality">Choose quality</string>
    <string name="text_not_find_match">No matches found</string>
    <string name="text_not_find_tour">Tournaments not found</string>
    <string name="text_not_find_players">Players not found</string>
    <string name="text_not_find_teams">Teams not found</string>
    <string name="wrong_login_or_password">Wrong login or password!</string>
    <string name="this_login_is_already_used">This login is already used!</string>
    <!-- Player -->
    <string name="text_slash" translatable="false">\u0020/\u0020</string>
    <string name="sight_of_bottom" translatable="false">\u0020/\u02C4</string>

    <string name="language_selection">Language selection</string>
    <string name="buying_it">buying it</string>
    <string name="exo_track_resolution_pixel" translatable="false"><xliff:g id="height" example="768">%1$dp</xliff:g></string>
    <string name="returnToLive">Return to LIVE</string>
</resources>