<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/home_background"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Orlando - Maritzburg"
        android:textColor="@color/white"
        android:textSize="32sp" />

    <TextView
        android:id="@+id/tvWatchLive"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="24dp"
        android:background="@drawable/round_background_t_w_state_selected"
        android:drawablePadding="10dp"
        android:focusable="true"
        android:includeFontPadding="false"
        android:paddingHorizontal="16dp"
        android:paddingVertical="4dp"
        android:text="@string/watch_live_stream"
        android:textColor="@drawable/background_text_dialog_live"
        android:textSize="24sp"
        app:drawableEndCompat="@drawable/ic_live" />

    <TextView
        android:id="@+id/tvWatchFromStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/round_background_t_w_state_selected"
        android:focusable="true"
        android:paddingHorizontal="16dp"
        android:paddingVertical="4dp"
        android:text="@string/watch_from_the_start"
        android:textColor="@drawable/background_text_dialog_live"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/tvContinueWatch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/round_background_t_w_state_selected"
        android:focusable="true"
        android:paddingHorizontal="16dp"
        android:paddingVertical="4dp"
        android:text="@string/continue_with"
        android:textColor="@drawable/background_text_dialog_live"
        android:textSize="24sp" />
</LinearLayout>