<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <FrameLayout
        android:id="@+id/container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/bottomContainer"
        app:layout_constraintEnd_toStartOf="@+id/leftContainer"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginEnd="8dp"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.flexbox.FlexboxLayout
            android:id="@+id/btnContainer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:flexWrap="wrap"
            app:layout_constraintBottom_toTopOf="@+id/bottomContainer"
            app:layout_constraintEnd_toStartOf="@+id/leftContainer"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_height="300dp"
            tools:layout_width="300dp" />

        <com.google.android.flexbox.FlexboxLayout
            android:id="@+id/numContainer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:flexWrap="wrap"
            app:layout_constraintBottom_toTopOf="@+id/bottomContainer"
            app:layout_constraintEnd_toStartOf="@+id/leftContainer"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </FrameLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/leftContainer"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/container"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/backBtn"
            android:layout_width="@dimen/dp_46"
            android:layout_height="@dimen/dp_32"
            android:background="@drawable/keyboard_btn"
            android:focusable="true"
            android:padding="10dp"
            android:nextFocusDown="@id/inputTypeBtn"
            android:src="@drawable/ic_erase"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/button_text_state" />

        <TextView
            android:id="@+id/inputTypeBtn"
            android:layout_width="@dimen/dp_46"
            android:layout_height="@dimen/dp_32"
            android:background="@drawable/keyboard_btn"
            android:focusable="true"
            android:gravity="center"
            android:text="&amp;123"
            android:textColor="@color/button_text_state"
            android:textStyle="bold"
            app:autoSizeMaxTextSize="14sp"
            app:autoSizeMinTextSize="4sp"
            app:autoSizeTextType="uniform"
            android:nextFocusDown="@id/languageBtn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/backBtn" />

        <ImageView
            android:id="@+id/languageBtn"
            android:layout_width="@dimen/dp_46"
            android:layout_height="@dimen/dp_32"
            android:background="@drawable/keyboard_btn"
            android:focusable="true"
            android:nextFocusUp="@id/inputTypeBtn"
            android:padding="8dp"
            android:src="@drawable/ic_language"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:tint="@color/button_text_state" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/bottomContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/whitespaceBtn"
            style="@style/materialButtonStile"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:lines="1"
            android:minWidth="1dp"
            android:minHeight="1dp"
            android:paddingHorizontal="8dp"
            android:text="@string/whitespace"
            android:textSize="12sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/clearBtn"
            style="@style/materialButtonStile"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:lines="1"
            android:minWidth="1dp"
            android:minHeight="1dp"
            android:paddingHorizontal="8dp"
            android:text="@string/clear"
            android:textSize="12sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/searchBtn"
            style="@style/materialButtonStile"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:lines="1"
            android:minWidth="1dp"
            android:minHeight="1dp"
            android:paddingHorizontal="8dp"
            android:text="@string/search"
            android:textSize="12sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>